--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "trailingComma": "es5",
   "semi": true,
   "bracketSpacing": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "printWidth": 150
 }
