--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "dependencies": {
     "@mapbox/mapbox-gl-language": "^1.0.0",
     "@mapbox/polyline": "^1.1.1",
+    "@visx/axis": "^2.17.0",
+    "@visx/group": "^2.17.0",
+    "@visx/legend": "^2.17.0",
+    "@visx/responsive": "^2.17.0",
+    "@visx/scale": "^2.17.0",
+    "@visx/shape": "^2.17.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "gatsby": "^4.16.0",
